# claude-engineer

./: .devcontainer.json  .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  PULL_REQUEST.md  PULL_REQUEST_TEMPLATE.md  README.md  `pytest.ini` (ADD)  agent.py  app.py  ce3.py  claude_chat.py  client_anthropic.py  client_litellm.py  config.py  database.py  docker-compose.yml  env.example  file_operations.py  gitignore_parser.py  gradio_app.py  large.diff  main-gpt.py  main.py  ollama-eng.py  pyproject.toml  pytest.ini  readme.md  requirements-txt.txt  requirements.txt  run.bat  run.sh  settings.py  setup.bat  streamlit_app.py  test.py  tests  tools.py  (+2 more)
.cspell/: custom-dictionary.txt
Claude-Eng-v2/: main.py
Plus agents/: config.py  coordinator.py  main.py  tool_agent.py  tool_box.py  tools.py  utils.py
Plus agents/tools/: base_tool.py  create_file.py  create_folder.py  edit_and_apply.py  list_files.py  read_file.py  tavily_search.py
claude-engineer/: Dockerfile  main.py  ollama-eng.py  requirements.txt
docs/: README_JP.md
pa/: adapter.py  instrucciones.md  main.py
prompts/: swe.jinja  system_prompts.py
static/css/: style.css
static/js/: chat.js
templates/: index.html
tests/: conftest.py  test_config.py  test_database.py  test_gradio.py  test_streamlit.py
tinyproxy/: Dockerfile  start.sh  tinyproxy.conf
tools/: base.py  browsertool.py  conversation_summarizer.py  createfolderstool.py  diffeditortool.py  directorylistingtool.py  duckduckgotool.py  e2bcodetool.py  explorer.py  filecontentreadertool.py  filecreatortool.py  fileedittool.py  inprojectcodesearchtool.py  lintingtool.py  screenshottool.py  sequentialthinking.py  smartfileeditortool.py  toolcreator.py  uvpackagemanager.py  webscrapertool.py
